--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Inicio - Actividades JS</title>
 
     <!-- Icono -->
-    <link rel="icon" type="image/png" href="../public/img/logo.png">
+    <link rel="icon" type="image/png" href="public/img/logo.png">
+
+    <!-- Logo -->
+    <img src="public/img/logo.png" alt="Logo" class="img-fluid" width="500px" height="90px">
+
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
