correccion rutas con carpeta src

--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - Actividades JS</title>
 
-    <!-- Icono -->
-    <link rel="icon" type="image/png" href="public/img/logo.png">
-
-    <!-- Logo -->
-    <img src="public/img/logo.png" alt="Logo" class="img-fluid" width="500px" height="90px">
+    <link rel="icon" type="image/png" href="src/public/img/logo.png">
+    <link rel="stylesheet" href="src/shared/styles/styles.css">
+    <img src="src/public/img/logo.png" alt="Logo" class="img-fluid" width="500px" height="90px">
 
 
     <!-- Bootstrap -->
