--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - Actividades JS</title>
 
-    <link rel="icon" type="image/png" href="src/public/img/logo.png">
-    <link rel="stylesheet" href="src/shared/styles/styles.css">
-    <img src="src/public/img/logo.png" alt="Logo" class="img-fluid" width="500px" height="90px">
-
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="../public/img/logo.png">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +20,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Actividades JS</a>
+            <a class="navbar-brand" href="./index.html">Actividades JS</a>
             <div>
                 <a class="btn btn-outline-light me-2" href="./features/crud/crud.html">CRUD</a>
                 <a class="btn btn-outline-light me-2" href="./features/callback/callback.html">Callback</a>
@@ -34,11 +32,8 @@
     </nav>
 
     <div class="container text-center mt-5">
-
         <h1 class="mb-4">Bienvenido</h1>
-
-        <img src="../public/img/logo.png" alt="Logo" class="img-fluid" width="500px" height="90px">
-
+        <img src="../public/img/logo.png" alt="Logo" class="img-fluid" width="500">
     </div>
 
 </body>
